# rusic

./: Cargo.toml  README.md
src/: main.rs  mp3.rs  player.rs  playlist.rs  toolbar.rs
