[package]
name = "rusic"
version = "0.1.0"
authors = ["zero"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "^0.3.0"
gtk = "^0.3.0"
gdk-pixbuf = "^0.3.0"
id3 = "^0.2.0"
gtk-sys = "^0.5.0"
crossbeam = "^0.3.0"
pulse-simple = "^1.0.0"
simplemad = "^0.8.1"
m3u = "^1.0.0"